Made contact page and set up form api

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jura:wght@500;700&display=swap" rel="stylesheet"> 
@@ -32,7 +32,7 @@
           <img
             id="header-logo"
             width="300"
-            src="assets/images/TruenceTransparent.png"
+            src="./assets/images/TruenceTransparent.png"
             alt="Truence Software Consulting"
             style="display: inline-block;"
           />
@@ -55,18 +55,18 @@
         >
           <ul class="navbar-nav text-center">
             <li class="nav-item active">
-              <a class="nav-link" href="/index.html"
+              <a class="nav-link" href="./index.html"
                 ><u>Home</u> <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/services.html">Services</a>
+              <a class="nav-link" href="./services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/consulting.html">Consulting</a>
+              <a class="nav-link" href="./consulting.html">Consulting</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="./about.html">About</a>
             </li>
             <li>
               <a href="/contact.html"><button type="button" class="btn btn-outline-danger">
@@ -90,14 +90,14 @@
           your side. Our team of professionals can build you your reality, let’s get
           started!
         </p>
-        <a href="/contact.html" class="btn btn-outline-danger font-weight-bold">Get started</a>
-        <a href="/consulting.html" class="btn btn-outline-secondary font-weight-bold">How it works</a>
+        <a href="./contact.html" class="btn btn-outline-danger font-weight-bold">Get started</a>
+        <a href="./consulting.html" class="btn btn-outline-secondary font-weight-bold">How it works</a>
         </div>
       <div class="col-md-6 mb-sm-5 mt-sm-5">
       <img
         id="hero-image"
         class="img-fluid"
-        src="assets/images/undraw_maker_launch_re_rq81.svg"
+        src="./assets/images/undraw_maker_launch_re_rq81.svg"
         alt="An illustration of a rocketship launching."
       />
       </div>
@@ -107,7 +107,7 @@
 
     <section id="section-2">
       <h1 class="mb-0">From ideas to reality it all begins <span style="color: #FF6666;">here</span>.</h1>
-      <a href="/services.html">See what we can do for you.</a>
+      <a id="service"href="./services.html">See what we can do for you.</a>
         <!-- Carousel -->
       <div id="myCarousel" class="carousel slide mt-3" date-ride="carousel">
        <ol class="carousel-indicators">
@@ -120,42 +120,42 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="container p-5">
-              <h1 class="pb-3"><span class="underline">Web Applications</span></h1>
+              <a href="./contact.html"> <h1 class="pb-3"><span class="underline">Web Applications</span></h1></a>
               <div class="container">
               <p style="margin-bottom: 4rem;">Need a website? Our team is here to help you hand craft your perfect website.
               Whether it’s a landing page or a full-fledged webapp. Let’s make it happen together!</p>
               </div>
-              <img id="slide-1-img" src="assets/images/undraw_building_blocks_re_rwls.svg" alt="Illustration of a monitor." width="400px" class="img-fluid">
+              <img id="slide-1-img" src="./assets/images/undraw_building_blocks_re_rwls.svg" alt="Illustration of a monitor." width="400px" class="img-fluid">
             </div>
           </div>
 
           <div class="carousel-item">
             <div class="container p-5">
-              <h1 class="pb-3"><u class="underline">Financial Applications</u></h1>
+              <a href="./contact.html"><h1 class="pb-3"><u class="underline">Financial Applications</u></h1></a>
               <div class="container">
               <p style="margin-bottom: 4rem;">Need a fintech solution? Our very capable team is able to help you with your vision. Get in touch!</p>
               </div>
-              <img src="assets/images/undraw_mobile_pay_re_sjb8.svg" alt="Illustration of a monitor." width="400px" class="img-fluid">
+              <img src="./assets/images/undraw_mobile_pay_re_sjb8.svg" alt="Illustration of a a phone with a card on the screen." width="400px" class="img-fluid">
             </div>
           </div>
 
           <div class="carousel-item">
             <div class="container p-5">
-              <h1 class="pb-3"><u class="underline">Mobile & Desktop Applications</u></h1>
+              <a href="./contact.html"><h1 class="pb-3"><u class="underline">Mobile & Desktop Applications</u></h1></a>
               <div class="container">
               <p style="margin-bottom: 4rem;">Our team is capable of bringing your app ideas to life, let’s make it happen! We’ll get you up and running no matter where you are in the process.</p>
             </div>
-              <img src="assets/images/undraw_progressive_app_m-9-ms.svg" alt="Illustration of a monitor." width="400px" class="img-fluid">
+              <img src="./assets/images/undraw_progressive_app_m-9-ms.svg" alt="Illustration of multiple monitors next to each other" width="400px" class="img-fluid">
             </div>
           </div>
 
           <div class="carousel-item">
             <div class="container p-5">
-              <h1 class="pb-3"><u class="underline">Custom Software & Design</u></h1>
+              <a href="./contact.html"><h1 class="pb-3"><u class="underline">Custom Software & Design</u></h1></a>
               <div class="container">
               <p style="margin-bottom: 4rem;">We understand your ideas come in many shapes and colors, let’s see what we can do for you! We’re here to take your journey with you, and we’re here every step of the way.</p>
               </div>
-              <img src="assets/images/undraw_team_collaboration_re_ow29.svg" alt="Illustration of a monitor." width="450px" class="img-fluid">
+              <img src="./assets/images/undraw_team_collaboration_re_ow29.svg" alt="Illustration of a team of people next to each other" width="450px" class="img-fluid">
             </div>
           </div>
 
@@ -178,7 +178,7 @@
       <div class="col pr-5">
       <h1 class="display-5 mb-3">The Truence <u class="underline">Philosophy</u></h1>
       <p>We aim to simplify the consultancy process. We’re here to bring your ideas to life at the best rates in the business. Our goal is to break down the barriers into software, design, and tech, one project at a time. Let’s work together to make your ideas a reality.</p>
-      <a href="/about.html" class="btn btn-outline-danger font-weight-bold">About Us</a>
+      <a href="./about.html" class="btn btn-outline-danger font-weight-bold">About Us</a>
       </div>
       <img src="/assets/images/undraw_getting_coffee_re_f2do.svg" alt="An illustration of two people sitting at a table drinking coffee."
       class="img-fluid col-md-6 mt-5">
@@ -190,16 +190,16 @@
       <div class="col pr-5">
       <h1 class="display-5 mb-3">How it works, beginning with <u class="underline"><span style="color: #FF6666">you</span></u></h1>
       <p class="display-md-5">Truence is a people-first company. We’re here to assist you in creating your vision. This begins with an initial consultation meeting where we go over procedures, budget, timelines, and goals. From there we’ll update you during every step of the process so you’re never wondering how far along we are. We’ll split up your project into segments that allow you to give feedback and work alongside us. It all begins with you. To learn more about our services and processes check out our consulting page.</p>
-      <a href="/consulting.html" class="btn btn-outline-danger font-weight-bold">Consulting</a>
+      <a href="./consulting.html" class="btn btn-outline-danger font-weight-bold">Consulting</a>
       </div>
-      <img src="/assets/images/undraw_scrum_board_re_wk7v.svg" alt="An illustration of two people standing in front of a board with notes on it."
+      <img src="./assets/images/undraw_scrum_board_re_wk7v.svg" alt="An illustration of two people standing in front of a board with notes on it."
       class="img-fluid col-md-6 mt-5">
       </div>
     </section>
 
     <section id="section-5" class="container font-weight-bold text-center p-5 mb-5">
       <h1 class="display-4">Let's get building!</h1>
-      <a href="/contact.html" class="btn btn-outline-danger">Contact Us</a>
+      <a href="./contact.html" class="btn btn-outline-danger">Contact Us</a>
     </section>
 
     <div id="sec-6-bg">
@@ -207,10 +207,10 @@
       <div class="row">
       <div class="col pr-5">
       <h1 class="display-5 mb-3">Interested in joining the team?</h1>
-      <p class="display-md-5">Head on over to our careers page to see our open positions, see what we have to offer you and how we can create amazing things together!</p>
-      <a href="/about.html#careers" class="btn btn-outline-secondary font-weight-bold">Careers</a>
+      <p class="display-md-5">Contact us if to see our open positions, see what we have to offer you and how we can create amazing things together!</p>
+      <a href="./contact.html" class="btn btn-outline-light font-weight-bold">Careers</a>
       </div>
-      <img src="/assets/images/undraw_developer_activity_re_39tg.svg" alt="An illustration of a man with a laptop sitting at a desk."
+      <img src="./assets/images/undraw_developer_activity_re_39tg.svg" alt="An illustration of a man with a laptop sitting at a desk."
       class="img-fluid col-md-6">
       </div>
     </section>
@@ -223,16 +223,16 @@
       <a href="./index.html">
         <img
           width="300"
-          src="assets/images/transparent_truence.png"
+          src="./assets/images/transparent_truence.png"
           alt="Truence Software Consulting"
           style="display: inline-block;"
         />
       </a>
       <div class="mt-3">
-        <a href="/services.html">Services</a>
-        <a href="/about.html">About</a>
-        <a href="/consulting.html">Consulting</a>
-        <a href="/contact.html">Contact</a>
+        <a href="./services.html">Services</a>
+        <a href="./about.html">About</a>
+        <a href="./consulting.html">Consulting</a>
+        <a href="./contact.html">Contact</a>
       </div>
       </div>
       <p class="m-0 p-1">Truence LLC &#169; 2022</p>
