--- a/consulting.html
+++ b/consulting.html
@@ -13,7 +13,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/css/consulting.css" />
+    <link rel="stylesheet" href="./assets/css/consulting.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@500;700&display=swap" rel="stylesheet"> 
@@ -28,11 +28,11 @@
       id="header-nav"
       class="navbar navbar-light bg-light navbar-expand-lg txt-center"
     >
-      <a id="header-logo-link" href="/index.html" class="navbar-brand">
+      <a id="header-logo-link" href="./index.html" class="navbar-brand">
         <img
           id="header-logo"
           width="300"
-          src="/assets/images/TruenceTransparent.png"
+          src="./assets/images/TruenceTransparent.png"
           alt="Truence Software Consulting"
           style="display: inline-block;"
         />
@@ -55,20 +55,20 @@
       >
         <ul class="navbar-nav text-center">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/services.html">Services</a>
+            <a class="nav-link" href="./services.html">Services</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/consulting.html"
+            <a class="nav-link" href="./consulting.html"
               ><u>Consulting</u> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="./about.html">About</a>
           </li>
           <li>
-            <a href="/contact.html"><button type="button" class="btn btn-outline-danger">
+            <a href="./contact.html"><button type="button" class="btn btn-outline-danger">
               Contact Us
             </button>
             </a>
@@ -82,7 +82,7 @@
   <main>
     <section class="container text-center pt-5 font-weight-bold">
         <div class="container">
-          <img src="/assets/images/undraw_building_re_xfcm.svg" alt="Illustration of a programmer in front of two monitors."
+          <img src="./assets/images/undraw_building_re_xfcm.svg" alt="Illustration of a building."
           class="img-fluid" width="500">
         </div>
       <h1 class="display-4 mb-5"><u class="underline">Truence Consulting</u></h1>
@@ -181,7 +181,7 @@
        <h3 class="p-3"><u class="underline font-weight-bold">Custom Solutions</u></h1>
        <p class="lead">Navigating businesses can be frustrating. We understand and we're here to make it easier, any way we can. Whatever problem you may be facing or whatever solution you need created, our team is here for you.</p>
 
-       <img src="assets/images/undraw_proud_coder_re_exuy.svg" class="img-fluid m-4 w-75">
+       <img src="./assets/images/undraw_proud_coder_re_exuy.svg" alt="An illustration of a woman next to a computer, waving." class="img-fluid m-4 w-75">
      </section>
 
 
@@ -189,7 +189,7 @@
       <div class="container text-center p-3 text-white">
         <h1 class="mb-3">Want to work together?</h1>
         <p class="font-weight-bold mb-5">Contact us to learn about our individualized business plans and how we can make amazing things together.</p>
-        <a href="/contact.html" class="btn btn-outline-light">Contact Us</a>
+        <a href="./contact.html" class="btn btn-outline-light">Contact Us</a>
       </div>
     </section>
 
@@ -203,16 +203,16 @@
     <a href="/index.html">
       <img
         width="300"
-        src="/assets/images/transparent_truence.png"
+        src="./assets/images/transparent_truence.png"
         alt="Truence Software Consulting"
         style="display: inline-block;"
       />
     </a>
     <div class="mt-3">
-      <a href="/services.html">Services</a>
-      <a href="/about.html">About</a>
-      <a href="/consulting.html">Consulting</a>
-      <a href="/contact.html">Contact</a>
+      <a href="./services.html">Services</a>
+      <a href="./about.html">About</a>
+      <a href="./consulting.html">Consulting</a>
+      <a href="./contact.html">Contact</a>
     </div>
     </div>
     <p class="m-0 p-1">Truence LLC &#169; 2022</p>
