--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
     <section id="section-1" class="container p-5">
         <div class="row">
         <div class="col pr-5">
-        <h1 class="display-5 mb-3 font-weight-bold">Our mission</h1>
+        <h1 class="display-5 mb-3 font-weight-bold"><u class="underline">Our mission</u></h1>
         <p class="font-weight-bold lead">We aim to simplify the consultancy process. Truence allows for a streamlined and simple way of making ideas a reality. We're here to break down the barriers of creation, Truence serves to be the pathway to bring anyone’s idea to life. No matter who you are. Truence will allow for accessibility and simplicity in the creation process for everyone.</p>
         </div>
         <img src="./assets/images/undraw_the_world_is_mine_re_j5cr.svg" alt="An illustration of a woman next to the earth"
@@ -169,7 +169,7 @@
             <p class="font-weight-bold mb-2 w-75">Contact us for available opportunities on our team. Make your mark and build dreams with us.</p>
             <a href="./contact.html" class="btn btn-outline-light">Contact Us</a>
             </div>
-            <img id="career-img" src="assets/images/undraw_interview_re_e5jn.svg" alt=""
+            <img id="career-img" src="./assets/images/undraw_interview_re_e5jn.svg" alt=""
             class="img-fluid col-md-6 mt-5">
             </div>
           </section>
