--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         <img
           id="header-logo"
           width="300"
-          src="/assets/images/TruenceTransparent.png"
+          src="./assets/images/TruenceTransparent.png"
           alt="Truence Software Consulting"
           style="display: inline-block;"
         />
@@ -82,7 +82,7 @@
   <main>
     <section class="container text-center pt-5 font-weight-bold">
         <div class="container">
-          <img src="/assets/images/undraw_mailbox_re_dvds.svg" alt="Illustration of a mailbox"
+          <img src="./assets/images/undraw_mailbox_re_dvds.svg" alt="Illustration of a mailbox"
           class="img-fluid" width="300">
         </div>
       <h1 class="display-4 font-weight-bold mb-5">Let's get started <u class="underline">started</u>.</h1>
@@ -130,17 +130,17 @@
 
   </div>
   <div class="container d-flex justify-content center">
-  <img src="assets/images/undraw_welcoming_re_x0qo.svg" alt="An illustration of a man next to a tree, waving." class="img-fluid" width="400">
+  <img src="./assets/images/undraw_welcoming_re_x0qo.svg" alt="An illustration of a man next to a tree, waving." class="img-fluid" width="400">
 </div>
 
   </main>
 
   <footer class="text-white text-center mt-5">
     <div class="d-flex align-items-center p-5 flex-column">
-    <a href="/index.html">
+    <a href="./index.html">
       <img
         width="300"
-        src="/assets/images/transparent_truence.png"
+        src="./assets/images/transparent_truence.png"
         alt="Truence Software Consulting"
         style="display: inline-block;"
       />
