--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <a class="nav-link" href="./about.html">About</a>
             </li>
             <li>
-              <a href="/contact.html"><button type="button" class="btn btn-outline-danger">
+              <a href="./contact.html"><button type="button" class="btn btn-outline-danger">
                 Contact Us
               </button>
               </a>
@@ -180,7 +180,7 @@
       <p>We aim to simplify the consultancy process. We’re here to bring your ideas to life at the best rates in the business. Our goal is to break down the barriers into software, design, and tech, one project at a time. Let’s work together to make your ideas a reality.</p>
       <a href="./about.html" class="btn btn-outline-danger font-weight-bold">About Us</a>
       </div>
-      <img src="/assets/images/undraw_getting_coffee_re_f2do.svg" alt="An illustration of two people sitting at a table drinking coffee."
+      <img src="./assets/images/undraw_getting_coffee_re_f2do.svg" alt="An illustration of two people sitting at a table drinking coffee."
       class="img-fluid col-md-6 mt-5">
       </div>
     </section>
