--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/css/services.css" />
+    <link rel="stylesheet" href="./assets/css/services.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jura:wght@500;700&display=swap" rel="stylesheet"> 
@@ -29,11 +29,11 @@
       id="header-nav"
       class="navbar navbar-light bg-light navbar-expand-lg txt-center"
     >
-      <a id="header-logo-link" href="/index.html" class="navbar-brand">
+      <a id="header-logo-link" href="./index.html" class="navbar-brand">
         <img
           id="header-logo"
           width="300"
-          src="/assets/images/TruenceTransparent.png"
+          src="./assets/images/TruenceTransparent.png"
           alt="Truence Software Consulting"
           style="display: inline-block;"
         />
@@ -56,20 +56,20 @@
       >
         <ul class="navbar-nav text-center">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/services.html"
+            <a class="nav-link" href="./services.html"
               ><u>Services</u> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/consulting.html">Consulting</a>
+            <a class="nav-link" href="./consulting.html">Consulting</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="./about.html">About</a>
           </li>
           <li>
-            <a href="/contact.html"><button type="button" class="btn btn-outline-danger">
+            <a href="./contact.html"><button type="button" class="btn btn-outline-danger">
               Contact Us
             </button>
             </a>
@@ -84,7 +84,7 @@
     <section class="container text-center pt-5 font-weight-bold">
       <h1 class="display-4 mb-5"><u class="underline">Our Services</u></h1>
       <div class="container">
-        <img src="/assets/images/undraw_programming_re_kg9v.svg" alt="Illustration of a programmer in front of two monitors."
+        <img src="./assets/images/undraw_programming_re_kg9v.svg" alt="Illustration of a programmer in front of two monitors."
         class="img-fluid" width="500">
       </div>
       <p class="mt-5 lead">Truence covers an expansive range of technologies and design to provide the smoothest journey from inception to deployment. Truence and our talented team is here to support you with any individual or business needs. Whatever you need, at any stage of a project lifecycle, we've got you covered.</p>
@@ -174,7 +174,7 @@
      <section class="p-5">
        <div class="container text-center p-5 bg-dark text-white">
          <p class="font-weight-bold">Didn't see what you need listed here? Contact us anyways and we'll adapt to meet your needs.</p>
-         <a href="/contact.html" class="btn btn-outline-light">Contact Us</a>
+         <a href="./contact.html" class="btn btn-outline-light">Contact Us</a>
        </div>
      </section>
   </main>
@@ -184,16 +184,16 @@
     <a href="./index.html">
       <img
         width="300"
-        src="/assets/images/transparent_truence.png"
+        src="./assets/images/transparent_truence.png"
         alt="Truence Software Consulting"
         style="display: inline-block;"
       />
     </a>
     <div class="mt-3">
-      <a href="/services.html">Services</a>
-      <a href="/about.html">About</a>
-      <a href="/consulting.html">Consulting</a>
-      <a href="/contact.html">Contact</a>
+      <a href="./services.html">Services</a>
+      <a href="./about.html">About</a>
+      <a href="./consulting.html">Consulting</a>
+      <a href="./contact.html">Contact</a>
     </div>
     </div>
     <p class="m-0 p-1">Truence LLC &#169; 2022</p>
