Typos and links

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 
     <section id="section-2">
-      <h1 class="mb-0">From ideas to reality it all begins <span style="color: #FF6666;">here</span>.</h1>
-      <a id="service"href="./services.html">See what we can do for you.</a>
+      <h1 class="mb-0 font-weight-bold">From ideas to reality it all begins <span style="color: #FF6666;">here</span>.</h1>
+      <a id="service" href="./services.html">See what we can do for you.</a>
         <!-- Carousel -->
       <div id="myCarousel" class="carousel slide mt-3" date-ride="carousel">
        <ol class="carousel-indicators">
@@ -120,7 +120,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="container p-5">
-              <a href="./contact.html"> <h1 class="pb-3"><span class="underline">Web Applications</span></h1></a>
+              <a href="./contact.html" class="carousel-links"> <h1 class="pb-3"><span class="underline">Web Applications</span></h1></a>
               <div class="container">
               <p style="margin-bottom: 4rem;">Need a website? Our team is here to help you hand craft your perfect website.
               Whether it’s a landing page or a full-fledged webapp. Let’s make it happen together!</p>
@@ -131,7 +131,7 @@
 
           <div class="carousel-item">
             <div class="container p-5">
-              <a href="./contact.html"><h1 class="pb-3"><u class="underline">Financial Applications</u></h1></a>
+              <a class="carousel-links" href="./contact.html"><h1 class="pb-3"><u class="underline">Financial Applications</u></h1></a>
               <div class="container">
               <p style="margin-bottom: 4rem;">Need a fintech solution? Our very capable team is able to help you with your vision. Get in touch!</p>
               </div>
@@ -141,7 +141,7 @@
 
           <div class="carousel-item">
             <div class="container p-5">
-              <a href="./contact.html"><h1 class="pb-3"><u class="underline">Mobile & Desktop Applications</u></h1></a>
+              <a class="carousel-links" href="./contact.html"><h1 class="pb-3"><u class="underline">Mobile & Desktop Applications</u></h1></a>
               <div class="container">
               <p style="margin-bottom: 4rem;">Our team is capable of bringing your app ideas to life, let’s make it happen! We’ll get you up and running no matter where you are in the process.</p>
             </div>
@@ -151,11 +151,11 @@
 
           <div class="carousel-item">
             <div class="container p-5">
-              <a href="./contact.html"><h1 class="pb-3"><u class="underline">Custom Software & Design</u></h1></a>
+              <a class="carousel-links" href="./contact.html"><h1 class="pb-3"><u class="underline">Custom Software & Design</u></h1></a>
               <div class="container">
               <p style="margin-bottom: 4rem;">We understand your ideas come in many shapes and colors, let’s see what we can do for you! We’re here to take your journey with you, and we’re here every step of the way.</p>
               </div>
-              <img src="./assets/images/undraw_team_collaboration_re_ow29.svg" alt="Illustration of a team of people next to each other" width="450px" class="img-fluid">
+              <img src="./assets/images/undraw_team_collaboration_re_ow29.svg" alt="Illustration of a team of people next to each other working on a board." width="450px" class="img-fluid">
             </div>
           </div>
 
@@ -176,21 +176,21 @@
     <section id="section-3" class="container font-weight-bold p-5">
       <div class="row">
       <div class="col pr-5">
-      <h1 class="display-5 mb-3">The Truence <u class="underline">Philosophy</u></h1>
+      <h1 class="display-5 mb-3 font-weight-bold">The Truence <u class="underline">Philosophy</u></h1>
       <p>We aim to simplify the consultancy process. We’re here to bring your ideas to life at the best rates in the business. Our goal is to break down the barriers into software, design, and tech, one project at a time. Let’s work together to make your ideas a reality.</p>
-      <a href="./about.html" class="btn btn-outline-danger font-weight-bold">About Us</a>
-      </div>
-      <img src="./assets/images/undraw_getting_coffee_re_f2do.svg" alt="An illustration of two people sitting at a table drinking coffee."
-      class="img-fluid col-md-6 mt-5">
-      </div>
-    </section>
-
-    <section id="section-4" class="container font-weight-bold p-5">
-      <div class="row">
-      <div class="col pr-5">
-      <h1 class="display-5 mb-3">How it works, beginning with <u class="underline"><span style="color: #FF6666">you</span></u></h1>
-      <p class="display-md-5">Truence is a people-first company. We’re here to assist you in creating your vision. This begins with an initial consultation meeting where we go over procedures, budget, timelines, and goals. From there we’ll update you during every step of the process so you’re never wondering how far along we are. We’ll split up your project into segments that allow you to give feedback and work alongside us. It all begins with you. To learn more about our services and processes check out our consulting page.</p>
       <a href="./consulting.html" class="btn btn-outline-danger font-weight-bold">Consulting</a>
+    </div>
+    <img src="./assets/images/undraw_getting_coffee_re_f2do.svg" alt="An illustration of two people sitting at a table drinking coffee."
+    class="img-fluid col-md-6 mt-5">
+  </div>
+</section>
+
+<section id="section-4" class="container font-weight-bold p-5">
+  <div class="row">
+    <div class="col pr-5">
+      <h1 class="display-5 mb-3 font-weight-bold">How it works, beginning with <u class="underline"><span style="color: #FF6666">you</span></u></h1>
+      <p class="display-md-5">Truence is a people-first company. We’re here to assist you in creating your vision. This begins with an initial consultation meeting where we go over procedures, budget, timelines, and goals. From there we’ll update you during every step of the process so you’re never wondering how far along we are. We’ll split up your project into segments that allow you to give feedback and work alongside us. It all begins with you. To learn more about our services and processes check out our about page.</p>
+      <a href="./about.html" class="btn btn-outline-danger font-weight-bold">About Us</a>
       </div>
       <img src="./assets/images/undraw_scrum_board_re_wk7v.svg" alt="An illustration of two people standing in front of a board with notes on it."
       class="img-fluid col-md-6 mt-5">
