--- a/services.html
+++ b/services.html
@@ -82,17 +82,17 @@
 
   <main>
     <section class="container text-center pt-5 font-weight-bold">
-      <h1 class="display-4 mb-5"><u class="underline">Our Services</u></h1>
       <div class="container">
         <img src="./assets/images/undraw_programming_re_kg9v.svg" alt="Illustration of a programmer in front of two monitors."
         class="img-fluid" width="500">
       </div>
-      <p class="mt-5 lead">Truence covers an expansive range of technologies and design to provide the smoothest journey from inception to deployment. Truence and our talented team is here to support you with any individual or business needs. Whatever you need, at any stage of a project lifecycle, we've got you covered.</p>
+      <h1 class="display-4 mb-3 mt-5"><u class="underline">Our Services</u></h1>
+      <p class="mb-5 lead font-weight-bold">Truence covers an expansive range of technologies and design to provide the smoothest journey from inception to deployment. Truence and our talented team is here to support you with any individual or business needs. Whatever you need, at any stage of a project lifecycle, we've got you covered.</p>
     </section>
 
     <section>
     <!-- Carousel -->
-    <div id="myCarousel" class="carousel slide" date-ride="carousel">
+    <div id="myCarousel" class="carousel slide font-weight-bold" date-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
