--- a/contact.html
+++ b/contact.html
@@ -85,19 +85,19 @@
           <img src="./assets/images/undraw_mailbox_re_dvds.svg" alt="Illustration of a mailbox"
           class="img-fluid" width="300">
         </div>
-      <h1 class="display-4 font-weight-bold mb-5">Let's get started <u class="underline">started</u>.</h1>
-      <p class="mt-5 mb-5 lead font-weight-bold">Submit the form below to get the process started. If you're interested in the steps, take a quick looks at our <a href="about.html">about page</a>. We look forward to working with you!</p>
+      <h1 class="display-4 font-weight-bold mb-5">Let's get <u class="underline">started</u>.</h1>
+      <p class="mt-5 mb-5 lead font-weight-bold">Submit the form below to get the process started. If you're interested in the steps, take a quick look at our <a href="./about.html">about page</a>. We look forward to working with you!</p>
     </section>
 
     <div id="form-style" class="container mt-5 mb-5 p-5 text-center">
-    <h1 class="mb-5"><u class="underline">Contact Us</u>  </h1>
+    <h1 class="mb-5"><u class="underline">Contact Us</u> </h1>
     <form id="my-form" class="w-m-50 mx-auto font-weight-bold" action="https://formspree.io/f/mknyjzak" method="POST">
       <div class="form-group">
-        <label for="Email">Email address</label>
+        <label for="Email">Email address*</label>
         <input type="email" class="form-control" id="Email" name="Email" placeholder="Enter an email address" required>
       </div>
       <div class="form-group">
-        <label for="name">Name</label>
+        <label for="name">Name*</label>
         <input type="text" class="form-control" id="name" name="name" placeholder="Enter a name" required>
       </div>
       <div class="form-group">
@@ -111,16 +111,18 @@
         </select>
       </div>
       <div class="form-group font-weight-bold">
-        <label for="subject">Subject</label>
-        <select multiple class="form-control" id="subject" name="subject" required>
+        <label for="subject">Subject*</label>
+        <select class="form-control" id="subject" name="subject" required>
+          <option>Select a subject</option>
           <option>Schedule Consultation</option>
           <option>General Question</option>
           <option>Careers</option>
+          <option>Platform Enrollment</option>
           <option>Other</option>
         </select>
       </div>
       <div class="form-group">
-        <label for="message">Message</label>
+        <label for="message">Message*</label>
         <textarea class="form-control" id="message" placeholder="Enter a message here!" name="message" rows="3" required></textarea>
       </div>
       <p class="mt-5">Send it our way!</p>
