Forgot to add, typography tweak

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 
 
   <main>
-    <section class="container text-center pt-5 font-weight-bold">
+    <section class="container text-center pt-5">
         <div class="container">
           <img src="./assets/images/undraw_hello_re_3evm.svg" alt="Illustration of a man sitting in front of a computer, waving."
           class="img-fluid" width="500">
@@ -94,7 +94,7 @@
     <section id="section-1" class="container p-5">
         <div class="row">
         <div class="col pr-5">
-        <h1 class="display-5 mb-3 font-weight-bold"><u class="underline">Our mission</u></h1>
+        <h1 class="mb-3 font-weight-bold"><u class="underline">Our mission</u></h1>
         <p class="font-weight-bold lead">We aim to simplify the consultancy process. Truence allows for a streamlined and simple way of making ideas a reality. We're here to break down the barriers of creation, Truence serves to be the pathway to bring anyone’s idea to life. No matter who you are. Truence will allow for accessibility and simplicity in the creation process for everyone.</p>
         </div>
         <img src="./assets/images/undraw_the_world_is_mine_re_j5cr.svg" alt="An illustration of a woman next to the earth"
