--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
 
     <div id="form-style" class="container mt-5 mb-5 p-5 text-center">
     <h1 class="mb-5"><u class="underline">Contact Us</u> </h1>
-    <form id="my-form" class="w-m-50 mx-auto font-weight-bold" action="https://formspree.io/f/mknyjzak" method="POST">
+    <form id="my-form" class="w-m-50 mx-auto font-weight-bold" action="https://formspree.io/f/xzboeaoz" method="POST">
       <div class="form-group">
         <label for="Email">Email address*</label>
         <input type="email" class="form-control" id="Email" name="Email" placeholder="Enter an email address" required>
